<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">物流管理系统</string>
    <string name="loginnamestr">登录名</string>
    <string name="passwordstr">密码</string>
    <string name="typestr">用户类型</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="logining">登录中……</string>
    <string name="login_err">用户名或密码错误</string>
    <string name="login_empty">用户名或密码不能为空</string>
    <string name="userMgr">操作员</string>
    <string name="companyMgr">企业管理</string>
    <string name="departmentMgr">部门管理</string>
    <string name="positionMgr">职位管理</string>
    <string name="timesegMgr">门禁时段</string>
    <string name="dooraccessMgr">门禁管理</string>
    <string name="cardoperate">卡操作</string>
    <string name="exit">退出</string>
    <string name="stationMgr">站点管理</string>
    <string name="goodstypeMgr">货物类型</string>
    <string name="goodsinfoMgr">货物信息</string>
    <string name="packageMgr">物品打包</string>
    <string name="inoroutMgr">出入站</string>
    <string name="goodsfollowMgr">物品跟踪</string>
    <string name="select_usertype">请选择操作员类型</string>
    <string name="stationlist_empty">站点信息列表为空</string>
    <string name="station_using">站点正在使用</string>
    <string name="provincestr">所在省份</string>
    <string name="citystr">所在城市</string>
    <string name="stationnamestr">站点名称</string>
    <string name="stationname_empty">站点名称为空</string>
    <string name="stationaddr_empty">请选择所在城市</string>
    <string name="select_province">请选择所处省份</string>
    <string name="select_optype">请选择操作类型</string>
    <string name="goodstype_using">货物类型正在使用</string>
    <string name="typecodestr">货物类型编号</string>
    <string name="typenamestr">货物类型名称</string>
    <string name="typecode_empty">货物类型编号为空</string>
    <string name="typename_empty">货物类型名称为空</string>
    <string name="typelist_empty">货物类型列表为空</string>
    <string name="goodslist_empty">货物信息列表为空</string>
    <string name="goodsinfo_using">货物信息正在使用</string>
    <string name="goodstypestr">货物类型</string>
    <string name="goodsnamestr">货物名称</string>
    <string name="goodstype_empty">请选择货物类型</string>
    <string name="goodsname_empty">货物名称为空</string>
    <string name="select_goodstype">请选择货物类型</string>
    <string name="ordernumstr">订单号</string>
    <string name="receiveaddrstr">收件地址</string>
    <string name="goodsinfostr">货物信息</string>
    <string name="select_station">请选择站点信息</string>
    <string name="stationstr">所属站点</string>
    <string name="select_goods">请选择物品</string>
    <string name="receiveaddr_empty">收件地址为空</string>
    <string name="goods_empty">物品信息为空</string>
    <string name="nextstationstr">下一站</string>
    <string name="station_in">入站</string>
    <string name="station_out">出站</string>
    <string name="waitfordelivery">等待派送</string>
    <string name="ordernumber_err">订单号输入错误</string>
    <string name="cardsn_err">卡号输入错误</string>
    <string name="followlist_empty">跟踪记录为空</string>
    
    <string name="selectall">选择全部</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="ensure">确定</string>
    <string name="confirm_exit">确定退出？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="add_success">添加成功</string>
    <string name="add_failure">添加失败</string>
    <string name="deleting">正在删除……</string>
    <string name="querying">正在查询……</string>
    <string name="query_failure">查询失败</string>
    <string name="userlist_empty">操作员列表为空</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    <string name="repasswordstr">确认密码</string>
    <string name="usernamestr">用户名</string>
    <string name="save">确定</string>
    <string name="loginname_empty">登录名为空</string>
    <string name="password_empty">密码为空</string>
    <string name="username_empty">用户名为空</string>
    <string name="repassword_empty">确认密码为空</string>
    <string name="repassword_err">您输入的密码和确认密码不一致</string>
    <string name="delete_ensure">确定要删除吗？</string>
    <string name="delete_confirm">删除提示</string>
    <string name="operate_select">选择操作</string>
    <string name="select_all">全选</string>
    <string name="list_empty">请选择要操作的记录</string>
    <string name="operating">正在操作……</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_failure">操作失败</string>
    <string name="companynamestr">企业名称</string>
    <string name="companyname_empty">企业名称为空</string>
    <string name="departmentlist_empty">部门列表为空</string>
    <string name="deptnamestr">部门名称</string>
    <string name="deptname_empty">部门名称为空</string>
    <string name="positionlist_empty">职位列表为空</string>
    <string name="postnamestr">职位名称</string>
    <string name="postname_empty">职位名称为空</string>
    <string name="choose">请选择</string>
    <string name="timeseglist_empty">门禁时段列表为空</string>
    <string name="timesegnamestr">时段名称</string>
    <string name="weekctrstr">星期控制</string>
    <string name="startdatestr">开始日期</string>
    <string name="enddatestr">结束日期</string>
    <string name="starttime1str">开始时段1</string>
    <string name="endtime1str">结束时段1</string>
    <string name="starttime2str">开始时段2</string>
    <string name="endtime2str">结束时段2</string>
    <string name="starttime3str">开始时段3</string>
    <string name="endtime3str">结束时段3</string>
    <string name="select_timeseg">请选择门禁时段</string>
    <string name="select_weekctr">请选择星期控制</string>
    <string name="timesegname_empty">门禁时段名称为空</string>
    <string name="startdate_empty">开始日期为空</string>
    <string name="enddate_empty">结束日期为空</string>
    <string name="starttime1_empty">开始时段1为空</string>
    <string name="endtime1_empty">结束时段1为空</string>
    <string name="starttime2_empty">开始时段2为空</string>
    <string name="endtime2_empty">结束时段2为空</string>
    <string name="starttime3_empty">开始时段3为空</string>
    <string name="endtime3_empty">结束时段3为空</string>
    <string name="enddate_earlier">结束日期应晚于开始日期</string>
    <string name="endtime1_earlier">结束时段1应晚于开始日期</string>
    <string name="endtime2_earlier">结束时段2应晚于开始日期</string>
    <string name="endtime3_earlier">结束时段3应晚于开始日期</string>
    <string name="opencard">开户</string>
    <string name="readcard">读卡</string>
    <string name="lost">挂失</string>
    <string name="lost_query">挂失查询</string>
    <string name="close">销户</string>
    <string name="cardcodestr">卡号</string>
    <string name="timestr">时间</string>
    <string name="statestr">状态</string>
    <string name="swiping_card">刷卡</string>
    <string name="LF">13.56M IC卡</string>
    <string name="HF">2.4G</string>
    <string name="readcard_failure">读卡失败</string>
    <string name="cardid8bitstr">原始卡号</string>
    <string name="custnamestr">员工姓名</string>
    <string name="useridstr">员工工号</string>
    <string name="cardsnstr">卡序号</string>
    <string name="deptstr">所属部门</string>
    <string name="poststr">所属职位</string>
    <string name="cardid8bit_empty">原始卡号为空</string>
    <string name="custname_empty">客户姓名为空</string>
    <string name="userid_empty">客户工号为空</string>
    <string name="dept_empty">请选择部门</string>
    <string name="post_empty">请选择职位</string>
    <string name="card_using">此卡正常使用中</string>
    <string name="card_lost">此卡正在挂失中</string>
    <string name="database_err">数据库操作失败</string>
    <string name="userid_exist">此工号已存在</string>
    <string name="select_department">请选择部门</string>
    <string name="select_position">请选择职位</string>
    <string name="rightslist_empty">门禁权限列表为空</string>
    <string name="carduserlist_empty">卡用户列表为空</string>
    <string name="timeseg_using">门禁时段正在使用</string>
    <string name="write_card_err">写卡失败</string>
    <string name="read_card_err">读卡失败</string>
    <string name="uart_open_err">串口打开失败</string>
    <string name="destroy_success">销户成功</string>
    <string name="condition_empty">查询条件为空</string>
    <string name="destroyed">此卡已销户</string>
    <string name="cardtimeout">此卡已挂失</string>
    <string name="timeout_success">挂失成功</string>
    <string name="restart_query">解挂查询</string>
    <string name="query">查询</string>
    <string name="initcard">卡初始化</string>
    <string name="restart">解挂</string>
    <string name="user_notexist">用户信息不存在</string>
    <string name="destroy_first">请先进行销户操作</string>
    <string name="read_first">请先进行读卡操作</string>
    <string name="deliveryman">派件员</string>
    <string name="operater">操作员</string>
    <string name="delivery">派件</string>
    <string name="sign">签收</string>
    <string name="notallowed">对不起，派件员没有系统管理权限</string>
    
    <string name="main_login">系统登录</string>
    <string name="main_systemmgr">系统管理</string>
    <string name="main_goodsmgr">物品管理</string>
    <string name="main_goodsfollow">物品跟踪</string>
</resources>
