<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"
    android:gravity="center"
    >  
	<RelativeLayout 
	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center"
		android:layout_marginTop="20dip" 
		android:gravity="center">
		<TextView 
		    android:id="@+id/sub_sys_main_common_cardcodestr" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#000000"
			android:text="@string/cardcodestr" 
			android:textSize="16sp"/>
		<TextView 
		    android:id="@+id/sub_sys_main_common_cardcode"
			android:layout_width="160.0dip"  
			android:layout_height="wrap_content" 
			android:textColor="#000000" 
			android:textSize="16sp"
			android:layout_toRightOf="@id/sub_sys_main_common_cardcodestr"/>
		<ImageView android:id="@+id/sub_sys_main_line1" 
		    android:layout_width="200.0dip" 
			android:layout_height="wrap_content" 
			android:layout_below="@id/sub_sys_main_common_cardcode" 
			android:src="@drawable/bottom_line" 
			android:layout_marginTop="5dip"
			android:layout_marginLeft="20dip"/>
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center" 
		android:layout_marginTop="10dip" 
		android:gravity="center">
		<TextView 
		    android:id="@+id/sub_sys_main_common_timetr" 
		    android:text="@string/timestr" 
			android:layout_width="wrap_content"  android:layout_height="wrap_content"
		  	android:textColor="#000000" android:textSize="16sp"/>
		<TextView 
		    android:id="@+id/sub_sys_main_common_time"
		  	android:layout_width="160.0dip" 
		  	 android:layout_height="wrap_content" 
		  	android:textColor="#000000" 
		  	android:textSize="16sp"
		  	android:layout_toRightOf="@id/sub_sys_main_common_timetr"/>
		<ImageView 
		    android:id="@+id/sub_sys_main_line2" 
		    android:layout_width="200.0dip" 
			android:layout_height="wrap_content"
			android:layout_below="@id/sub_sys_main_common_time" 
			android:src="@drawable/bottom_line" 
			android:layout_marginTop="5dip"
			android:layout_marginLeft="20dip"/>
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center" 
		android:layout_marginTop="10dip" 
		android:layout_marginBottom="25dip"
		android:gravity="center">
		<TextView 
		    android:id="@+id/sub_sys_main_common_statestr" 
		    android:text="@string/statestr" 
			android:layout_width="wrap_content"  
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			android:textSize="16sp"/>
		<TextView 
		    android:id="@+id/sub_sys_main_common_right"
			android:layout_width="160.0dip"  
			android:layout_height="wrap_content" 
			android:textColor="#000000" 
			android:textSize="16sp"
			android:layout_toRightOf="@id/sub_sys_main_common_statestr"/>
		<ImageView 
		    android:id="@+id/sub_sys_main_line3" 
		    android:layout_width="200.0dip" 
			android:layout_height="wrap_content" 
			android:layout_below="@id/sub_sys_main_common_right" 
			android:src="@drawable/bottom_line" 
			android:layout_marginTop="5dip"
			android:layout_marginLeft="20dip"/>
	</RelativeLayout> 
</LinearLayout>  